@@ -1,3 +1,11 @@
+2008-08-31  Stefan Kost  <ensonic@users.sf.net>
+
+	* FSM/Chorus/Chorus.cpp:
+	* FSM/Chorus2/Makefile.am:
+	* FSM/Chorus2/Chorus.cpp:
+	* FSM/Chorus2/Chorus2.cpp:
+	  Add original Chorus and rename new to Chorus2.
+
 2008-06-23  Krzysztof Foltman  <kfoltman@users.sf.net>
 
 	* common/dsplib.h:
